Added settings in table simple for unit label in headers by property

--- a/src/cui-data/cell/cui-data-editable-cell.component.html
+++ b/src/cui-data/cell/cui-data-editable-cell.component.html
@@ -279,6 +279,7 @@
                             [label]="property.label"
                             [isEditable]="property.inputConfig.table.isEditable"
                             [IsWithoutLabel]="property.inputConfig.table.isWithoutLabel"
+                            [isNeedUnitLabelForHeaders]="property.inputConfig.table.isNeedUnitLabelForHeaders"
                             (changedByUser)="ChangeByUser($event)"
 >
 
