Added opportunity to use complex in table

--- a/src/cui-data/cell/cui-data-editable-cell.component.html
+++ b/src/cui-data/cell/cui-data-editable-cell.component.html
@@ -267,6 +267,7 @@
                        [model]="model"
                        [value]="value"
                        [inComplex]="inComplex"
+                       [inTable]="property.inputConfig.complex.inTable"
                        (changedByUser)="ChangeByUser($event)"
 >
 
