--- a/src/cui-data/cell/cui-data-read-only-cell.component.html
+++ b/src/cui-data/cell/cui-data-read-only-cell.component.html
@@ -1,5 +1,5 @@
 <div [class]="ResolveGroupClass()">
-    <label *ngIf="inComplex" [class]="ResolveLabelClass()">{{label}}</label>
+    <label *ngIf="inComplex && !inComplexTable" [class]="ResolveLabelClass()">{{label}}</label>
     <div [class]="ResolveControlClass()">
       <div [innerHTML]="SanitizeHtml(property.value(model))" *ngIf="property.is_html; else notHtml"></div>
       <ng-template #notHtml>
