--- a/src/cui-data/cell/cui-data-editable-cell.component.html
+++ b/src/cui-data/cell/cui-data-editable-cell.component.html
@@ -115,6 +115,8 @@
                     [componentForOptionGroups]="property.inputConfig.select.componentForOptionGroups"
                     [componentForLabel]="property.inputConfig.select.componentForLabel"
                     [isMultiple]="property.inputConfig.select.isMultiple"
+                    [isHideSelectedOptions]="property.inputConfig.select.isHideSelectedOptions"
+                    [isShowAll]="property.inputConfig.select.isShowAll"
 >
 
 </cui-select-control>
