--- a/src/cui-data/cell/cui-data-editable-cell.component.html
+++ b/src/cui-data/cell/cui-data-editable-cell.component.html
@@ -206,6 +206,29 @@
 
 </cui-typeahead-new-control>
 
+<cui-progressbar-control *ngIf="property.inputType === 'progressbar'"
+                         [key]="property.key"
+                         [value]="value"
+                         [label]="ResolveLabel()"
+                         [controlClass]="ResolveControlClass()"
+                         [groupClass]="ResolveGroupClass()"
+                         [labelClass]="ResolveLabelClass()"
+                         (changedByUser)="ChangeByUser($event)"
+                         [validations]="property.validations"
+                         #cuiInput
+                         [isDisabled]="IsDisabledProperty(property, model)"
+                         (change)="ChangeByUser($event.target.value)"
+                         [errorMessageInTooltip]="true"
+                         [isShowBarLabel]="property.inputConfig.progressbar.isShowBarLabel"
+                         [isStriped]="property.inputConfig.progressbar.isStriped"
+                         [isAnimate]="property.inputConfig.progressbar.isAnimate"
+                         [barLabel]="property.inputConfig.progressbar.barLabel(model)"
+                         [type]="property.inputConfig.progressbar.type ? property.inputConfig.progressbar.type(model) : 'info'"
+                         [max]="property.inputConfig.progressbar.max ? property.inputConfig.progressbar.max(model) : 100"
+>
+
+</cui-progressbar-control>
+
 <cui-ol-point-control *ngIf="property.inputType === 'ol_point'"
                       [key]="property.key"
                       [value]="value"
