Added isDisabled for custom buttons for table async

--- a/src/cui-data/table-async/cui-data-table-async.component.html
+++ b/src/cui-data/table-async/cui-data-table-async.component.html
@@ -140,7 +140,7 @@
               <td class="button-cell border">
                 <button [title]="button.title"
                         [class]="button.class + ' btn-sm'"
-                        [disabled]="isLoadingRows"
+                        [disabled]="button.isDisabled ? isLoadingRows || button.isDisabled(item) : isLoadingRows"
                         (click)="button.action(item, list, this)"
                 >
                 </button>
