Added isChangedByUsedOnModalHide for complex control

--- a/src/cui-data/cell/cui-data-editable-cell.component.html
+++ b/src/cui-data/cell/cui-data-editable-cell.component.html
@@ -311,6 +311,7 @@
                        [inComplex]="inComplex"
                        [inTable]="property.inputConfig.complex.inTable"
                        (changedByUser)="ChangeByUser($event)"
+                       [isChangedByUserOnModalHide]="property.inputConfig.complex.isChangedByUsedOnModalHide"
 >
 
 </cui-data-complex-cell>
