--- a/src/cui-data/cell/cui-data-editable-cell.component.html
+++ b/src/cui-data/cell/cui-data-editable-cell.component.html
@@ -232,6 +232,11 @@
 <cui-ol-point-control *ngIf="property.inputType === 'ol_point'"
                       [key]="property.key"
                       [value]="value"
+                      [model]="model"
+                      [label]="ResolveLabel()"
+                      [controlClass]="ResolveControlClass()"
+                      [groupClass]="ResolveGroupClass() + ' p-1'"
+                      [labelClass]="ResolveLabelClass()"
                       [CRS]="property.inputConfig.mapData.CRS(model)"
                       (changedByUser)="ChangeByUser($event)"
                       [validations]="property.validations"
@@ -245,6 +250,10 @@
                               [key]="property.key"
                               [value]="value"
                               [model]="model"
+                              [label]="ResolveLabel()"
+                              [controlClass]="ResolveControlClass()"
+                              [groupClass]="ResolveGroupClass() + ' p-1'"
+                              [labelClass]="ResolveLabelClass()"
                               [CRS]="property.inputConfig.mapData.CRS(model)"
                               (changedByUser)="ChangeByUser($event)"
                               [validations]="property.validations"
