--- a/src/cui-control/ol/polygon-special/cui-ol-polygon-special-control.component.html
+++ b/src/cui-control/ol/polygon-special/cui-ol-polygon-special-control.component.html
@@ -1,27 +1,24 @@
-<label *ngIf="label" [for]="key" [class]="labelClass">{{label}}</label>
-<div class="row-equal row form-group">
-  <div class="col-9">
-    <label>Количество точек: {{GetCountPoints()}}</label>
-  </div>
-  <div>
-    <button
-      [title]="'Выбрать на карте'"
-      [class]="'btn btn-secondary icon icon-map btn-lg btn-block'"
-      (click)="OpenModalForEditPolygonOnMap(template)"
-      [disabled]="isDisabled"
-    >
-    </button>
-    <ng-template #template>
-        <dynamic-container
-                [data]="{
+<div class="form-group p-1" style="margin-bottom: 0 !important;">
+    <div>
+        <button
+                [title]="'Настроить на карте'"
+                [class]="'btn btn-info btn-sm btn-block'"
+                (click)="OpenModalForEditPolygonOnMap(template)"
+                [disabled]="isDisabled"
+        >
+            Выбрать на карте
+        </button>
+        <ng-template #template>
+            <dynamic-container
+                    [data]="{
                     olSpecialData: olSpecialData,
                     CRS: CRS,
                     key: key, value: value, changedByUser: changedByUser,
                     modalRef: modalRef
                 }"
-                [componentClass]="olSpecialData.modalComponent"
-        >
-        </dynamic-container>
-    </ng-template>
-  </div>
+                    [componentClass]="olSpecialData.modalComponent"
+            >
+            </dynamic-container>
+        </ng-template>
+    </div>
 </div>
