--- a/src/scss/cui-data-table-async.component.scss
+++ b/src/scss/cui-data-table-async.component.scss
@@ -1,6 +1,16 @@
 @import "bootstrap-variables";
 
 cui-data-table-async table {
+  cui-ol-point-control.form-control {
+    border: 1px solid #c2cfd6 !important;
+    box-shadow: none !important;
+  }
+
+  cui-ol-point-special-control.form-control {
+    border: 1px solid #c2cfd6 !important;
+    box-shadow: none !important;
+  }
+
   .form-control {
     border: none !important;
     box-shadow: none !important;
