--- a/src/cui-control/ol/rectangle/cui-ol-rectangle-control.component.html
+++ b/src/cui-control/ol/rectangle/cui-ol-rectangle-control.component.html
@@ -1,24 +1,22 @@
-<label *ngIf="label" [for]="key" [class]="labelClass">{{label}}</label>
-<div class="row-equal row form-group">
-  <div class="col-9">
-    <label>Выбор на карте</label>
-  </div>
-  <div>
-    <button
-      [title]="'Выбрать на карте'"
-      [class]="'btn btn-secondary icon icon-map btn-lg btn-block'"
-      (click)="OpenModalForEditPolygonOnMap(template)"
-      [disabled]="isDisabled"
-    >
-    </button>
-    <ng-template #template>
-        <cui-ol-rectangle-select
-          [CRS]="CRS"
-          (coordinatesOfRectangleChanged)="ChangeValue($event)"
-          (hideModal)="HideModal()"
-          [coordinatesOfRectangle]="value"
+<div class="form-group p-1" style="margin-bottom: 0 !important;">
+    <div>
+        <button
+                [title]="'Настроить на карте'"
+                [class]="'btn btn-info btn-sm btn-block'"
+                (click)="OpenModalForEditPolygonOnMap(template)"
+                [disabled]="isDisabled"
         >
-        </cui-ol-rectangle-select>
-    </ng-template>
-  </div>
+            Выбрать на карте
+        </button>
+        <ng-template #template>
+            <cui-ol-rectangle-select
+                    [CRS]="CRS"
+                    [viewCenter]="viewCenter"
+                    (coordinatesOfRectangleChanged)="ChangeValue($event)"
+                    (hideModal)="HideModal()"
+                    [coordinatesOfRectangle]="value"
+            >
+            </cui-ol-rectangle-select>
+        </ng-template>
+    </div>
 </div>
